[package]
name = "quant-suite"
version = "0.1.1"
authors = ["Jaemin Kim <geminik23@gmail.com>"]
edition = "2021"
description = "A project aimed at creating tools for auto-trading, back-testing, and market analysis."
license = "MIT"
readme = "README.md"
# documentation = "https://docs.rs/"
repository = "https://github.com/geminik23/quant-suite"
keywords = ["AutoTrading", "Quant", "Market", "Finance"]

# [workspace]
# resolver = "2"
#
# members = [ "crates/*", ]



[dependencies]
thiserror = "2.0"
nanoid = "0.4"
serde = {version = "1.0", features = ["derive"]}




[dev-dependencies]
logger = "0.4"
dotenv = "0.15"
env_logger = "0.11"
tokio = { version="1.43", features=["full"] }
